--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -82,6 +82,12 @@
   align-items: flex-start;
 }
 
+.codeWrap {
+  background-color: rgb(27, 27, 27);
+  padding: 24px;
+  border-radius: 8px;
+  color: lightgrey;
+}
 .BlackButton {
   margin: 16px 0 16px 0;
   display: flex;
@@ -110,8 +116,8 @@
 }
 
 .listWrap {
-  height: 500px;
-  overflow: scroll;
+  max-height: 80vh;
+  overflow-x: scroll;
 }
 .imgParagraph {
   display: flex;
@@ -157,6 +163,10 @@
   box-shadow: 10px 10px 24px -13px rgba(51, 51, 51, 0.7);
   -webkit-box-shadow: 10px 10px 24px -13px rgba(121, 0, 95, 0.7);
   -moz-box-shadow: 10px 10px 24px -13px rgba(51, 51, 51, 0.7);
+}
+
+.box > .limitWidth {
+  max-width: 50vw;
 }
 
 .flexColumn {
